...
                Link(
                    destination: URL(
                        string:
                            "https://github.com/blomma/vittra.literaturetime/blob/main/PRIVACY.md"
                    )!
                ) {
                    Label("Privacy Policy", systemImage: "lock")
                }
                Link(
                    destination: URL(
                        string: "https://github.com/blomma/vittra.literaturetime/blob/main/LICENSE"
                    )!
                ) {
...
